# oresat-c3-software

./: .gitignore  README.md  bitarray-3.8.1-cp314-cp314-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  bitstring-4.4.0-py3-none-any.whl  canopen-2.4.1-py3-none-any.whl  cfdp_py-0.6.0-py3-none-any.whl  click-8.4.1-py3-none-any.whl  dacite-1.9.2-py3-none-any.whl  fastcrc-0.3.6-cp314-cp314-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  gen.py  marshmallow-3.26.2-py3-none-any.whl  oresat_c3-0.5.1.dev37+gf31faa8a4-py3-none-any.whl  oresat_configs-0.8.0-py3-none-any.whl  oresat_olaf-3.6.5-py3-none-any.whl  psutil-7.2.2-cp36-abi3-manylinux2010_x86_64.manylinux_2_12_x86_64.manylinux_2_28_x86_64.whl  pyproject.toml  python_can-4.6.1-py3-none-any.whl  requirements.txt  setup.cfg  smbus2-0.6.1-py2.py3-none-any.whl  spacepackets-0.31.0-py3-none-any.whl  tabulate-0.10.0-py3-none-any.whl  tibs-0.5.7-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  tox.ini  werkzeug-3.1.8-py3-none-any.whl  wrapt-1.17.3-cp314-cp314-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl
.github/workflows/: tests.yaml
configs/: cards.yaml  edl.yaml  od.yaml  oresat0.yaml  oresat0_5.yaml  oresat1.yaml
docs/: README.md  co_nodes.rst  conf.py  edl.rst  glossary.rst  index.rst  opd.rst  state.rst
docs/comms/: edl.rst  index.rst
docs/missions/: index.rst  oresat0.rst  oresat0_5.rst  oresat1.rst
docs/scripts/: gen_beacon_rst.py
docs/static/: comms_ipc.drawio
oresat_c3/: __init__.py  __main__.py  __main__.py.orig  ax25.py  burnwire.py  edl.py  opd.py  rtc.py
oresat_c3/board/: cpufreq.py
oresat_c3/commands/: command_obj.py
oresat_c3/data/: oresat_c3.dcf  oresat_c3.eds  oresat_c3.eds.tmp
oresat_c3/drivers/: fm24cl64b.py  max7310.py  rv3028c7.py  si41xx.py
oresat_c3/edl_commands/: __init__.py  abc_cmd.py  beacon_ping_cmd.py  c3_factory_reset_cmd.py  c3_hard_reset_cmd.py  c3_soft_reset_cmd.py  co_node_enable_cmd.py  co_node_status_cmd.py  co_sdo_read_cmd.py  co_sdo_write_cmd.py  co_sync_cmd.py  opd_enable_cmd.py  opd_probe_cmd.py  opd_reset_cmd.py  opd_scan_cmd.py  opd_status_cmd.py  opd_sys_enable_cmd.py  ping_cmd.py  rtc_set_time_cmd.py  rx_test_cmd.py  time_sync_cmd.py  tx_ctrl_cmd.py
oresat_c3/modes/: __init__.py  _mode.py  cfc_capture.py  gps_time_sync.py  oresat_live.py  star_tracker_capture.py  update.py
oresat_c3/protocals/: edl.py
oresat_c3/protocols/: ax25.py  cachestore.py  cfdp.py  edl.py  edl_command.py  edl_packet.py  sdls.py  uslp.py
oresat_c3/protocols/cop1/: __init__.py  _fop1_events.py  _fop1_transitions.py  common.py  control_word.py  farm.py  fop.py  util.py
oresat_c3/protocols/cop1/common/: ccsds.py  fsm.py  service.py
oresat_c3/protocols/cop1/fop/: __init__.py  _fop1_events.py  _fop1_transitions.py  fop.py  transitions.py  types.py
oresat_c3/resources/: __init__.py  beacon.py  edl.py  opd.py  state.py
oresat_c3/services/: __init__.py  _edl_runner.py  adcs.py  adcs.py.orig  adcs_manager.py  beacon.py  card_manager.py  channel_router.py  cop_manager.py  edl.py  edl.py.orig  node_flasher.py  node_manager.py  node_manager.py.orig  opd.py  oresat-c3.service  radios.py  radios.py.orig  rw_test.py  state.py  task_scheduler.py
oresat_c3/services/radios/: radios.py
oresat_c3/subsystems/: ADCS_Discrete_State_Space_Calculator.py  ADCS_FlightSoftware.py  Guidance_Functions.py  Kalman_Filter.py  Quaternions.py  _gpio.py  antennas.py  fram.py  opd.py  opd.py.orig  rtc.py
oresat_c3/subsystems/adcs/: config.py  discrete_state_space.py  guidance_functions.py  kalman_filter.py  quaternion.py
oresat_c3/subsystems/cop1/: __init__.py
oresat_c3/templates/: adcs.html  beacon.html  edl.html  keys.html  node_manager.html  opd.html  state.html
oresat_c3/ui/: __init__.py  base.tpl  beacon.tpl  card_manager.tpl  index.tpl  keys.tpl  node_manager.tpl  reset.tpl
oresat_watchdog/: app_surrogate.py  watchdog.py
scripts/: beacon.py  edl_cmd_shell.py  edl_file_upload.py  edl_ping_loop.py  file_upload.py  gen_beacon_rst.py
scripts/code_gen/: generate_fop_events.py
tests/: README.md  __init__.py  test_ax25.py  test_edl.py
tests/analysis/: IOSaturationAnalysis  compareJitter
tests/deployment and testing/: modeController.txt  pureBeacon.py
tests/drivers/: test_fm23cl64b.py  test_max7310.py
tests/metric collection/: measureJitter.py
tests/protocols/: test_ax25.py  test_cachestore.py  test_cop_1.py  test_edl.py  test_edl_command.py  test_edl_packet.py
tests/protocols_tests/: test_ax25.py  test_edl.py
tests/resource stressors/: memoryBomb.py  stressCPU.py  stressMemory.py
tests/resources/: __init__.py  test_state.py
tests/resources_tests/: test_edl.py
tests/services/: __init__.py  test_adcs_manager.py  test_state.py
tests/subsystems/: test_fram.py  test_opd.py  test_opd.py.orig
tests/subsystems_tests/: test_opd.py
