[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "oresat-c3"
description = "OreSat C3 app"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "bottle",
    "bitstring",
    "cfdp-py==0.1.2",
    "oresat-canopend",
    "smbus2",
    "spacepackets",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "oresat-configs",
    "ruff",
]

[project.scripts]
oresat-c3 = "oresat_c3.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "oresat_c3.__version__"}

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.tpl"]

[tool.setuptools_scm]
write_to = "oresat_c3/_version.py"

[tool.ruff]
line-length = 100
