[metadata]
name = oresat-c3
version = attr: oresat_c3.__version__
description = OreSat C3 app
long_description = file: README.md
url = https://github.com/oresat/oresat-c3-software
author = PSAS
author_email = oresat@pdx.edu
maintainer = PSAS
maintainer_email = oresat@pdx.edu
license = GPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Embedded Systems

[options]
packages = find:
install_requires =
    bitstring
    oresat-olaf>=1.0.0
    spacepackets
    smbus2
python_requires = >=3.7

[options.package_data]
oresat_c3 = 
    data/*
    templates/*

[options.entry_points]
console_scripts =
    oresat-c3 = oresat_c3.__main__:main
